feat: adicionando filtro por estado e ordenacao na listagem de pedido