@@ -5,6 +5,7 @@ import com.ufcg.psoft.pitsA.dto.pedido.PedidoReadResponseDTO;
 import com.ufcg.psoft.pitsA.exception.cliente.ClienteNaoExisteException;
 import com.ufcg.psoft.pitsA.exception.pedido.PedidoNaoEncontradoException;
 import com.ufcg.psoft.pitsA.model.cliente.Cliente;
+import com.ufcg.psoft.pitsA.model.pedido.EstadoPedido;
 import com.ufcg.psoft.pitsA.model.pedido.Pedido;
 import com.ufcg.psoft.pitsA.repository.ClienteRepository;
 import com.ufcg.psoft.pitsA.service.auth.AutenticaCodigoAcessoService;
@@ -12,6 +13,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -27,20 +29,29 @@ public class ClienteListarPedidoServiceImpl implements ClienteListarPedidoServic
     public List<PedidoReadResponseDTO> listarPedidos(Long clienteId, PedidoReadBodyDTO listarPedidoDTO) {
         Long pedidoId = listarPedidoDTO.getPedidoId();
         String codigoAcesso = listarPedidoDTO.getCodigoAcesso();
+        EstadoPedido estadoFiltro = listarPedidoDTO.getEstadoFiltro();
 
         Cliente cliente = clienteRepository.findById(clienteId).orElseThrow(ClienteNaoExisteException::new);
         autenticador.autenticar(cliente.getCodigoAcesso(), codigoAcesso);
 
         if (pedidoId == null) {
-            return cliente.getPedidos()
+            List<PedidoReadResponseDTO> pedidos = cliente.getPedidos()
                     .stream()
-                    .map(pedido -> {
-                        PedidoReadResponseDTO parsedPedido = modelMapper.map(pedido, PedidoReadResponseDTO.class);
-                        parsedPedido.setValorTotal(pedido.calculaValorTotal());
+                    .sorted(Comparator.comparing(p -> p.getEstado().ordinal()))
+                    .map(p -> {
+                        PedidoReadResponseDTO parsedPedido = modelMapper.map(p, PedidoReadResponseDTO.class);
+                        parsedPedido.setValorTotal(p.calculaValorTotal());
 
                         return parsedPedido;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
+
+            return estadoFiltro != null ?
+                    pedidos
+                    .stream()
+                            .filter(p -> p.getEstado().equals(estadoFiltro))
+                            .collect(Collectors.toList())
+                    : pedidos;
         } else {
             Pedido resultado = cliente.getPedidos()
                     .stream()
